5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4067/executions/1643_2447.log
== SUBMITION (2019-04-15 15:02:12) 
-- CODE:
preco = float(input("reais: "))
pagamento = float(input("reais: "))
if preço > pagamento:
	mensagem = "falta",preco-pagamento
else:
	mensagem = "troco de", pagamento-preco
print(round(mensagem,2))
-- EXECUTION TIME:
0.220182
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2447/main.py", line 3, in <module>
    if pre\xe7o > pagamento:
NameError: name 'pre\xe7o' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:02:52) 
-- CODE:
preco = float(input("reais: "))
pagamento = float(input("reais: "))
if preço > pagamento:
	mensagem = "falta",pagamento-preco
else:
	mensagem = "troco de", pagamento-preco
print(round(mensagem,2))
-- EXECUTION TIME:
0.235867
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2447/main.py", line 3, in <module>
    if pre\xe7o > pagamento:
NameError: name 'pre\xe7o' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:03:35) 
-- CODE:
preco = float(input("reais: "))
pagamento = float(input("reais: "))
if preço > pagamento:
	mensagem = "falta",preco - pagamento
else:
	mensagem = "troco de", pagamento-preco
print(round(mensagem,2))
-- EXECUTION TIME:
0.212331
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2447/main.py", line 3, in <module>
    if pre\xe7o > pagamento:
NameError: name 'pre\xe7o' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:03:35) 
-- CODE:
preco = float(input("reais: "))
pagamento = float(input("reais: "))
if preço > pagamento:
	mensagem = "falta",preco - pagamento
else:
	mensagem = "troco de", pagamento-preco
print(round(mensagem,2))
-- EXECUTION TIME:
0.228585
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2447/main.py", line 3, in <module>
    if pre\xe7o > pagamento:
NameError: name 'pre\xe7o' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:03:36) 
-- CODE:
preco = float(input("reais: "))
pagamento = float(input("reais: "))
if preço > pagamento:
	mensagem = "falta",preco - pagamento
else:
	mensagem = "troco de", pagamento-preco
print(round(mensagem,2)) 
-- EXECUTION TIME:
0.144139
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2447/main.py", line 3, in <module>
    if pre\xe7o > pagamento:
NameError: name 'pre\xe7o' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:03:48) 
-- CODE:
preco = float(input("reais: "))
pagamento = float(input("reais: "))
if preço > pagamento:
	mensagem = "falta",preco - pagamento
else:
	mensagem = "troco de",preco - pagamento
print(round(mensagem,2)) 
-- EXECUTION TIME:
0.144962
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2447/main.py", line 3, in <module>
    if pre\xe7o > pagamento:
NameError: name 'pre\xe7o' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:04:27) 
-- CODE:
preco = float(input("reais: "))
pagamento = float(input("reais: "))
if preço > pagamento:
	mensagem = "Falta",preco - pagamento
else:
	mensagem = "Troco de",preco - pagamento
print(round(mensagem,2)) 
-- EXECUTION TIME:
0.199962
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2447/main.py", line 3, in <module>
    if pre\xe7o > pagamento:
NameError: name 'pre\xe7o' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:04:41) 
-- CODE:
preco = float(input("reais: "))
pagamento = float(input("reais: "))
if preço > pagamento:
	mensagem = "Falta",preco - pagamento
else:
	mensagem = "Troco de",pagamento - preco
print(round(mensagem,2)) 
-- EXECUTION TIME:
0.169063
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2447/main.py", line 3, in <module>
    if pre\xe7o > pagamento:
NameError: name 'pre\xe7o' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:04:44) 
-- CODE:
preco = float(input("reais: "))
pagamento = float(input("reais: "))
if preço > pagamento:
	mensagem = "Falta",preco - pagamento
else:
	mensagem = "Troco de",pagamento - preco
print(round(mensagem,2)) 
-- EXECUTION TIME:
0.147636
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2447/main.py", line 3, in <module>
    if pre\xe7o > pagamento:
NameError: name 'pre\xe7o' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:04:46) 
-- CODE:
preco = float(input("reais: "))
pagamento = float(input("reais: "))
if preço > pagamento:
	mensagem = "Falta",preco - pagamento
else:
	mensagem = "Troco de",pagamento - preco
print(round(mensagem,2)) 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if preço > pagamento:
NameError: name 'preço' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:05:11) 
-- CODE:
preco = float(input("reais: "))
pagamento = float(input("reais: "))
if preco > pagamento:
	mensagem = "Falta",preco - pagamento
else:
	mensagem = "Troco de",pagamento - preco
print(round(mensagem,2)) 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(mensagem,2)) 
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:06:38) 
-- CODE:
preco = float(input("reais: "))
pagamento = float(input("reais: "))
if preco > pagamento:
	mensagem = "Falta",round(preco - pagamento,2)
else:
	mensagem = "Troco de",round(pagamento - preco,2)
print(mensagem) 
-- OUTPUT:
('Falta', 26.0)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:08:17) 
-- CODE:
preco = float(input("reais: "))
pagamento = float(input("reais: "))
if preco > pagamento:
	mensagem = "Falta" ,round(preco - pagamento,2)
else:
	mensagem = "Troco de" ,round(pagamento - preco,2)
print(mensagem) 
-- EXECUTION TIME:
0.208692
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
('Falta', 26.0)
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
('Troco de', 28.0)
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
('Troco de', 0.0)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:08:18) 
-- CODE:
preco = float(input("reais: "))
pagamento = float(input("reais: "))
if preco > pagamento:
	mensagem = "Falta" ,round(preco - pagamento,2)
else:
	mensagem = "Troco de" ,round(pagamento - preco,2)
print(mensagem) 
-- OUTPUT:
('Falta', 26.0)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:11:23) 
-- CODE:
preco = float(input("reais: "))
pagamento = float(input("reais: "))
if preco > pagamento:
	mensagem = "Falta"
	print(mensagem,round(preco-pagamento,2))
else:
	mensagem = "Troco de"
	print(mensagem,round(pagamento - preco,2)) 
-- EXECUTION TIME:
0.147525
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
